--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": "true",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack -o ./output --output-filename bundle.js"
   },
   "keywords": [],
   "author": "",
