--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": "true",
   "scripts": {
-    "build": "webpack --config mywebpack.config.js"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
