menghapus watch pada package.json

--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "private": "true",
   "scripts": {
-    "build": "webpack",
-    "watch": "webpack --watch"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
